# PyPDNS

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: mypy.yml  python-package.yml  release.yml
docs/source/: api_reference.rst  conf.py  index.rst
pypdns/: __init__.py  api.py  errors.py
tests/: test.py
