[tool.poetry]
name = "pypdns"
version = "2.2.7"
description = "Python API for PDNS."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "GPL-3.0+"

readme = "README.md"

repository = "https://github.com/CIRCL/PyPDNS"
documentation = "https://github.com/CIRCL/PyPDNS"

classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Security',
    'Topic :: Internet'
]

[tool.poetry.scripts]
pdns = 'pypdns:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CIRCL/PyPDNS/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests-cache = "^1.2.1"
dnspython = "^2.7.0"
Sphinx = [
    {version = "^8", python = ">=3.10", optional = true}
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
types-requests = "^2.32.0.20241016"
pytest = "^8.3.4"
ipython = [
    {version = "^8.19.0", python = ">=3.10"}
]

[tool.poetry.extras]
docs = ["Sphinx"]

[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"
