[project]
name = "pypdns"
version = "2.3.1"
description = "Python API for PDNS."
authors = [
    {name="Raphaël Vinot", email="raphael.vinot@circl.lu"}
]
license = "GPL-3.0+"
readme = "README.md"
requires-python = ">=3.10"

dynamic = [ "classifiers" ]

dependencies = [
    "requests-cache (>=1.2.1)",
    "dnspython (>=2.8.0)"
]

[project.urls]
repository = "https://github.com/CIRCL/PyPDNS"
documentation = "https://pypdns.readthedocs.io"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Topic :: Security',
    'Topic :: Internet'
]

[project.scripts]
pdns = 'pypdns:main'

[project.optional-dependencies]
docs = [ "sphinx (>=9.1.0) ; python_version >= \"3.12\"" ]

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
types-requests = "^2.32.4.20260107"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
